# contextprime

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENT_LOAD_FAILURE_REPORT.md  DUAL_INDEXING_SETUP.md  DUAL_LICENSE.md  EUROPEAN_UNION_ARTIFICIAL_INTELLIGENCE_ACT_COMPLIANCE_CHECKLIST_2026-02-20.md  FINAL_SYSTEM_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MARKETPLACE_RELEASE_CHECKLIST.md  POST_COMPACTION_REPORT.md  POST_TESTING_REPORT.md  PROCESSING_IMPLEMENTATION.md  PRODUCTION_ROLLOUT_CHECKLIST_2026-02-20.md  PROJECT_STATE.md  QUICK_REFERENCE.md  README.md  RELEASE_READINESS_REPORT_2026-02-20.md  RESET_RECOVERY_NOTE_2026-02-20.md  SECURITY.md  SUPPORT.md  TRUST_GUIDELINES.md  WORKING_PRINCIPLES.md  action.yml  docker-compose.yml  launch_system.py  quickstart.sh  run_european_union_artificial_intelligence_act_readiness.sh  run_full_tests_stable.sh  run_live_smoke_gate.sh  run_realworld_stable.sh  run_security_release_gate.sh  super_rag_digest.md  system_report.json  verify_installation.py  verify_system.py
doctags_rag/: .claude_preferences.md  .dockerignore  .env.example  Dockerfile  PHASE_3_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  PHASE_5_COMPLETION_REPORT.md  PHASE_5_FIXES_VALIDATION_REPORT.md  PIPELINE_TESTING_REPORT.md  QUICKSTART.md  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  test_launch.py
doctags_rag/compliance/: artificial_intelligence_literacy_register.csv  european_union_artificial_intelligence_act_profile.yaml  incident_and_serious_event_process.md
doctags_rag/config/: config.yaml
(+236 files in other folders)
