[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "contextprime"
version = "0.1.0"
description = "Document and web RAG platform — DocTags, hybrid retrieval, multi-agent pipeline"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "neo4j>=5.0.0",
    "qdrant-client>=1.10.0",
    "openai>=1.56.0",
    "loguru>=0.7.0",
    "networkx>=3.0",
    "rapidfuzz>=3.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "tqdm>=4.60.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.25.0",
    "python-multipart>=0.0.20",
    "langdetect>=1.0.9",
    "nltk>=3.9.0",
    "redis>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["contextprime*"]
